<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginStart="16dp"

        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/tv_tab_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_tab"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        style="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/tv_tab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_tab"

        style="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintTop_toTopOf="@+id/tv_tab_cars"
        app:layout_constraintStart_toEndOf="@+id/tv_tab_cars"
        android:layout_marginStart="16dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_favorite"
        app:cardCornerRadius="24dp"
        android:elevation="24dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cl_card_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
               />


            <TextView
                android:id="@+id/tv_price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/price"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 100.000,00"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                />


            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_battery_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="90 kWh"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_battery"
                app:layout_constraintTop_toTopOf="@id/tv_battery"
                />

            <TextView
                android:id="@+id/tv_power"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/power"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_battery"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90 cv"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_power"
                app:layout_constraintTop_toTopOf="@id/tv_power"
                />

            <TextView
                android:id="@+id/tv_recharge"
                android:layout_width="60dp"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_power"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_recharge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30 min"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_recharge"
                app:layout_constraintTop_toTopOf="@id/tv_recharge"
                app:layout_constraintBottom_toBottomOf="@+id/cl_card_content"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>







    <Button
        android:id="@+id/btnNavigate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@id/cv_card" />





</androidx.constraintlayout.widget.ConstraintLayout>
